// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with trail items 1`] = `
<nav
  className="breadcrumbtrail"
>
  <ul>
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        href="/jobs"
        onClick={[Function]}
      >
        Jobs
      </a>
    </li>
    <li>
      Non-link item
    </li>
  </ul>
</nav>
`;

exports[`renders correctly without any trail items 1`] = `
<nav
  className="breadcrumbtrail"
>
  <ul>
    <li>
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
  </ul>
</nav>
`;
